@@ -12,10 +12,13 @@ This file contains a hierarchical todo list for Albert OS
 - (done) sample implementation of a function, calling another function
          within Albert (self-contained nature of Albert)
 - (done) sample implementation of class member access
+- (done) implement a macro that allows a native code to call 
+         an emulated function
 - implement DataAbort() 
    - (active) implement functions that are called by DataAbort()
-   - implement a macro that allows a native code to call an emulated
-     function
+   - implemet a function that decides if Albert OS or the Emulator
+     must be called
+   - implement a macro that handles function hooks efficiently
 - test implementation for stand-alone AlbertOS
 - sample implementation of partial function replacement
 - sample implementation of class constructor and destructor
